--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "sweetalert2": "^11.21.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
